--- a/index.html
+++ b/index.html
@@ -12,28 +12,40 @@
     <div class="header__content">
       <div class="header__logo-container">
         <div class="header__logo-img-cont">
-          <img src="src/img/PPuse.png" alt="Jacob Limpar lantz Logo img" class="header__logo-img"/>
+          <img src="src/img/PPuse1.png" alt="Jacob Limpar lantz Logo img" class="header__logo-img"/>
         </div>
-        <span class="header__logo-sub">Jacob Limpar Lantz</span>
+        <span class="header__logo-text">Jacob</span>
       </div>
       <div class="header__main">
         <ul class="header__links">
-          <li class="header__link-wrapper">
-            <a href="./#home" class="header__link">Home</a>
+          <li>
+            <a href="#home" class="header__link">Home</a>
           </li>
-          <li class="header__link-wrapper">
-            <a href="./#about" class="header__link">About</a>
+          <li>
+            <a href="#about" class="header__link">About</a>
           </li>
-          <li class="header__link-wrapper">
-            <a href="./#projects" class="header__link">Projects</a>
+          <li>
+            <a href="#projects" class="header__link">Projects</a>
           </li>
-          <li class="header__link-wrapper">
-            <a href="./#contact" class="header__link">Contact</a>
+          <li>
+            <a href="#contact" class="header__link">Contact</a>
           </li>
         </ul>
       </div>
     </div>
   </header>
+  <section id="home">
+    <div class="section__text">
+      <p class="section__text__p1">Hey, I'm</p>
+      <h1 class="title">Jacob Limpar Lantz</h1>
+      <p class="section__text__p2">Frontend Developer</p>
+      <div class="btn-container">
+        <button class="btn btn-color-1" onclick="location.href='./#projects'">
+          Projects
+        </button>
+      </div>
+    </div>
+  </section>
 
   <script src="./index.js"></script>
 
