--- a/index.html
+++ b/index.html
@@ -39,31 +39,44 @@
     </section>
 
     <section id="about" class="section">
-        <div class="main-container">
-            <h2 class="main-heading">About Me</h2>
-            <div class="about-content">
-                <div class="about-content-main">
-                    <h3 class="content-title">Get to know me!</h3>
-                    <div class="content-details">
-                        <p class="content-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae ultrices quam.</p>
-                    </div>
-                    <button><a href="./#CV" class="btn btn-about">CV</a></button>
-                </div>
-                <div class="about-content-skills">
-                    <h3 class="content-title">My Skills</h3>
-                    <div class="skills-container">
-                        <div class="skill">HTML</div>
-                        <div class="skill">CSS</div>
-                        <div class="skill">JavaScript</div>
-                        <div class="skill">React</div>
-                        <div class="skill">SASS</div>
-                        <div class="skill">GIT</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    
+      <div class="main-container">
+          <h2 class="main-heading">About Me</h2>
+          <div class="about-content">
+              <div class="about-content-main">
+                  <h3 class="content-title">Get to know me!</h3>
+                  <div class="content-details">
+                      <p class="content-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae ultrices quam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dolore alias vitae at tempora voluptas mollitia libero consequuntur hic omnis architecto, dolorum ipsam adipisci quam accusantium. Similique corporis vel voluptatum! <strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo neque dolorum saepe enim, velit alias, rem quod ipsam aut, quaerat voluptates itaque perferendis doloremque esse aspernatur iusto quibusdam. Ducimus, atque?</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, reprehenderit! Ipsa in, quas, error, sunt ipsum incidunt facilis temporibus natus nemo assumenda numquam consectetur dicta! Dignissimos explicabo dolor maxime minima. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit eligendi quasi fuga quia aut non pariatur incidunt tempore, delectus neque, accusantium molestias architecto provident debitis, eum tempora earum nostrum est.</p>
+                  </div>
+                  <div class="btn-container">
+                      <button class="btn-about" onclick="window.open('/assets/resume-example.pdf')">Download CV</button>
+                  </div>
+              </div>
+              <div class="about-content-skills">
+                  <h3 class="content-title">My Skills</h3>
+                  <ul class="skills-list">
+                      <li class="skill">HTML</li>
+                      <li class="skill">CSS</li>
+                      <li class="skill">JavaScript</li>
+                      <li class="skill">React</li>
+                      <li class="skill">SASS</li>
+                      <li class="skill">GIT</li>
+                      <li class="skill">React</li>
+                      <li class="skill">SASS</li>
+                      <li class="skill">GIT</li>
+                      <li class="skill">React</li>
+                      <li class="skill">SASS</li>
+                      <li class="skill">GIT</li>
+                      <li class="skill">SASS</li>
+                      <li class="skill">GIT</li>
+                      <li class="skill">React</li>
+                      <li class="skill">SASS</li>
+                      <li class="skill">GIT</li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </section>
+  
     <script src="./index.js"></script>
 </body>
 </html>
