--- a/index.html
+++ b/index.html
@@ -54,23 +54,30 @@
               <div class="about-content-skills">
                   <h3 class="content-title">My Skills</h3>
                   <ul class="skills-list">
-                      <li class="skill">HTML</li>
-                      <li class="skill">CSS</li>
-                      <li class="skill">JavaScript</li>
-                      <li class="skill">React</li>
-                      <li class="skill">SASS</li>
-                      <li class="skill">GIT</li>
-                      <li class="skill">React</li>
-                      <li class="skill">SASS</li>
-                      <li class="skill">GIT</li>
-                      <li class="skill">React</li>
-                      <li class="skill">SASS</li>
-                      <li class="skill">GIT</li>
-                      <li class="skill">SASS</li>
-                      <li class="skill">GIT</li>
-                      <li class="skill">React</li>
-                      <li class="skill">SASS</li>
-                      <li class="skill">GIT</li>
+                    <li class="skill"><i class="fab fa-html5"></i> HTML</li>  
+                    <li class="skill"><i class="fab fa-css3-alt"></i> CSS</li>
+                    <li class="skill"><i class="fab fa-js"></i> JavaScript</li>
+                    <li class="skill"><i class="fab fa-react"></i> React</li>
+                    <li class="skill"><i class="fab fa-sass"></i> SASS</li>
+                    <li class="skill"><i class="fab fa-github"></i> GIT</li>
+                    <li class="skill"><i class="fab fa-html5"></i> HTML</li>  
+                    <li class="skill"><i class="fab fa-css3-alt"></i> CSS</li>
+                    <li class="skill"><i class="fab fa-js"></i> JavaScript</li>
+                    <li class="skill"><i class="fab fa-react"></i> React</li>
+                    <li class="skill"><i class="fab fa-sass"></i> SASS</li>
+                    <li class="skill"><i class="fab fa-github"></i> GIT</li>
+                    <li class="skill"><i class="fab fa-html5"></i> HTML</li>  
+                    <li class="skill"><i class="fab fa-css3-alt"></i> CSS</li>
+                    <li class="skill"><i class="fab fa-js"></i> JavaScript</li>
+                    <li class="skill"><i class="fab fa-react"></i> React</li>
+                    <li class="skill"><i class="fab fa-sass"></i> SASS</li>
+                    <li class="skill"><i class="fab fa-github"></i> GIT</li>
+                    <li class="skill"><i class="fab fa-html5"></i> HTML</li>  
+                    <li class="skill"><i class="fab fa-css3-alt"></i> CSS</li>
+                    <li class="skill"><i class="fab fa-js"></i> JavaScript</li>
+                    <li class="skill"><i class="fab fa-react"></i> React</li>
+                    <li class="skill"><i class="fab fa-sass"></i> SASS</li>
+                    <li class="skill"><i class="fab fa-github"></i> GIT</li>
                   </ul>
               </div>
           </div>
