made footer and sociala media

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
               </div>
           </div>
       </div>
-  </section>
+    </section>
 
-  <section id="projects" class="section">
+    <section id="projects" class="section">
   <div class="section-content">
-    <h2 class="section-title">Browse My Recent Projects</h2>
+    <h2 class="section-title">Browse my recent projects</h2>
     <div class="projects-container">
       <div class="project">
         <div class="project-details">
@@ -109,10 +109,29 @@
       </div>
     </div>
   </div>
-</section>
+    </section>
 
+    <section id="contact" class="section">
+      <div class="contact-container">
+
+      </div>
+    </section>
+
+    <footer id="footer" class="section">
+      <div class="footer-p">
+          <p>Copyright &#169; 2023 Jacob Limapr Lantz. All Rights Reserved.</p>
+      </div>
+      <div class="socials-container">
+          <h3 class="socials-title">Socials</h3>
+          <div class="socials-icons">
+              <a href="#"><i class="icon fab fa-linkedin"></i></a>
+              <a href="#"><i class="icon fab fa-github"></i></a>
+          </div>
+      </div>
+  </footer>
+  
 
   
-    <script src="./index.js"></script>
+    <script src="src/js/index.js"></script>
 </body>
 </html>
