moved socials :art:

--- a/index.html
+++ b/index.html
@@ -28,15 +28,30 @@
     </header>
 
     <section id="home" class="section">
-        <div class="section__text">
-            <p class="section__text__p1">Hey, I'm</p>
-            <h1 class="title-home">Jacob Limpar Lantz</h1>
-            <p class="section__text__p2">Frontend Developer</p>
-            <div class="btn-container">
-                <button class="btn-home" onclick="location.href='./#projects'">Projects</button>
-            </div>
-        </div>
-    </section>
+      <div class="section__text">
+          <p class="section__text__p1">Hey, I'm</p>
+          <h1 class="title-home">Jacob Limpar Lantz</h1>
+          <p class="section__text__p2">Frontend Developer</p>
+          <div class="btn-container">
+              <button class="btn-home" onclick="location.href='./#projects'">Projects</button>
+          </div>
+      </div>
+      <div class="home-hero__socials">
+          <div class="home-hero__social">
+              <a href="https://linkedin.com/in/" class="home-hero__social-icon-link" target="_blank">
+                  <i class="icon fab fa-linkedin-in"></i>
+              </a>
+          </div>
+          <div class="home-hero__social">
+              <a href="https://github.com/LaNtZ445" class="home-hero__social-icon-link" target="_blank">
+                  <i class="icon fab fa-github"></i>
+              </a>
+          </div>
+      </div>
+  </section>
+  
+
+
 
     <section id="about" class="section">
       <div class="main-container">
@@ -120,13 +135,6 @@
     <footer id="footer" class="section">
       <div class="footer-p">
           <p>Copyright &#169; 2023 Jacob Limapr Lantz. All Rights Reserved.</p>
-      </div>
-      <div class="socials-container">
-          <h3 class="socials-title">Socials</h3>
-          <div class="socials-icons">
-              <a href="#"><i class="icon fab fa-linkedin"></i></a>
-              <a href="#"><i class="icon fab fa-github"></i></a>
-          </div>
       </div>
   </footer>
   
