--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <div class="header__content">
             <div class="header__logo-container">
                 <div class="header__logo-img-cont">
-                  <img src="src/img/PPuse1.png" alt="Jacob Limpar lantz Logo img" class="header__logo-img" onclick="location.href='#home'">
+                    <img src="src/img/PPuse1.png" alt="Jacob Limpar lantz Logo img" class="header__logo-img" onclick="location.href='#home'">
                 </div>
                 <span class="header__logo-text" onclick="location.href='#home'">Jacob</span>
-              </div>
+            </div>
             <nav class="header__main">
                 <ul class="header__links">
                     <li><a href="#home" class="header__link">Home</a></li>
@@ -28,118 +28,123 @@
     </header>
 
     <section id="home" class="section">
-      <div class="section__text">
-          <p class="section__text__p1">Hey, I'm</p>
-          <h1 class="title-home">Jacob Limpar Lantz</h1>
-          <p class="section__text__p2">Frontend Developer</p>
-          <div class="btn-container">
-              <button class="btn-home" onclick="location.href='./#projects'">Projects</button>
-          </div>
-      </div>
-      <div class="home-hero__socials">
-          <div class="home-hero__social">
-              <a href="https://linkedin.com/in/" class="home-hero__social-icon-link" target="_blank">
-                  <i class="icon fab fa-linkedin-in"></i>
-              </a>
-          </div>
-          <div class="home-hero__social">
-              <a href="https://github.com/LaNtZ445" class="home-hero__social-icon-link" target="_blank">
-                  <i class="icon fab fa-github"></i>
-              </a>
-          </div>
-      </div>
-  </section>
+        <div class="section__text">
+            <p class="section__text__p1">Hey, I'm</p>
+            <h1 class="title-home">Jacob Limpar Lantz</h1>
+            <p class="section__text__p2">Frontend Developer</p>
+            <div class="btn-container">
+                <button class="btn-home" onclick="location.href='./#projects'">Projects</button>
+            </div>
+        </div>
+        <div class="home-hero__socials">
+            <div class="home-hero__social">
+                <a href="https://linkedin.com/in/" class="home-hero__social-icon-link" target="_blank">
+                    <i class="icon fab fa-linkedin-in"></i>
+                </a>
+            </div>
+            <div class="home-hero__social">
+                <a href="https://github.com/LaNtZ445" class="home-hero__social-icon-link" target="_blank">
+                    <i class="icon fab fa-github"></i>
+                </a>
+            </div>
+            <div class="home-hero__social">
+                <a href="mailto:jacoblimparlantz@gmail.com?Subject=Frontend%20Developer%20Portfolio%20Inquiry" class="home-hero__social-icon-link" target="_blank">
+                    <i class="icon far fa-envelope"></i>
+                </a>
+            </div>             
+        </div>
+    </section>
   
-
-
-
     <section id="about" class="section">
-      <div class="main-container">
-          <h2 class="main-heading">About Me</h2>
-          <div class="about-content">
-              <div class="about-content-main">
-                  <h3 class="content-title">Get to know me!</h3>
-                  <div class="content-details">
-                      <p class="content-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae ultrices quam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dolore alias vitae at tempora voluptas mollitia libero consequuntur hic omnis architecto, dolorum ipsam adipisci quam accusantium. Similique corporis vel voluptatum! <strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo neque dolorum saepe enim, velit alias, rem quod ipsam aut, quaerat voluptates itaque perferendis doloremque esse aspernatur iusto quibusdam. Ducimus, atque?</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, reprehenderit! Ipsa in, quas, error, sunt ipsum incidunt facilis temporibus natus nemo assumenda numquam consectetur dicta! Dignissimos explicabo dolor maxime minima. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit eligendi quasi fuga quia aut non pariatur incidunt tempore, delectus neque, accusantium molestias architecto provident debitis, eum tempora earum nostrum est.</p>
+        <div class="main-container">
+            <h2 class="main-heading">About Me</h2>
+            <div class="about-content">
+                <div class="about-content-main">
+                    <h3 class="content-title">Get to know me!</h3>
+                    <div class="content-details">
+                        <p class="content-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae ultrices quam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dolore alias vitae at tempora voluptas mollitia libero consequuntur hic omnis architecto, dolorum ipsam adipisci quam accusantium. Similique corporis vel voluptatum! <strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo neque dolorum saepe enim, velit alias, rem quod ipsam aut, quaerat voluptates itaque perferendis doloremque esse aspernatur iusto quibusdam. Ducimus, atque?</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, reprehenderit! Ipsa in, quas, error, sunt ipsum incidunt facilis temporibus natus nemo assumenda numquam consectetur dicta! Dignissimos explicabo dolor maxime minima. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit eligendi quasi fuga quia aut non pariatur incidunt tempore, delectus neque, accusantium molestias architecto provident debitis, eum tempora earum nostrum est.</p>
+                    </div>
+                    <div class="btn-container">
+                      <a href="assets/JACOB-LIMPAR-LANTZ-RESUME.pdf" download="resume.pdf" target="_blank">
+                        <button class="btn-about">
+                            Download Resume &nbsp;<i class="fas fa-file file-icon"></i>
+                        </button>
+                    </a>
                   </div>
-                  <div class="btn-container">
-                    <button class="btn-about" onclick="window.open('/assets/resume-example.pdf')">Download Resume &nbsp;<i class="fas fa-file file-icon"></i></button>
-                  </div>
-              </div>
-              <div class="about-content-skills">
-                  <h3 class="content-title">My Skills</h3>
-                  <ul class="skills-list">
-                    <li class="skill"><i class="fab fa-html5"></i> HTML</li>  
-                    <li class="skill"><i class="fab fa-css3-alt"></i> CSS</li>
-                    <li class="skill"><i class="fab fa-js"></i> JavaScript</li>
-                    <li class="skill"><i class="fab fa-react"></i> React</li>
-                    <li class="skill"><i class="fab fa-vuejs"></i> Vue</li>  
-                    <li class="skill"><i class="fab fa-node-js"></i> Node.js</li>
-                    <li class="skill"><i class="fas fa-database"></i> SQL</li>
-                    <li class="skill"><i class="fab fa-figma"></i> Figma</li>
-                  </ul>
-              </div>
-          </div>
-      </div>
+                </div>
+                <div class="about-content-skills">
+                    <h3 class="content-title">My Skills</h3>
+                    <ul class="skills-list">
+                        <li class="skill"><i class="fab fa-html5"></i> HTML</li>  
+                        <li class="skill"><i class="fab fa-css3-alt"></i> CSS</li>
+                        <li class="skill"><i class="fab fa-js"></i> JavaScript</li>
+                        <li class="skill"><i class="fab fa-react"></i> React</li>
+                        <li class="skill"><i class="fab fa-vuejs"></i> Vue</li>  
+                        <li class="skill"><i class="fab fa-node-js"></i> Node.js</li>
+                        <li class="skill"><i class="fas fa-database"></i> SQL</li>
+                        <li class="skill"><i class="fab fa-figma"></i> Figma</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section id="projects" class="section">
-  <div class="section-content">
-    <h2 class="section-title">Browse my recent projects</h2>
-    <div class="projects-container">
-      <div class="project">
-        <div class="project-details">
-          <img src="src/img/PPuse.png" alt="Project 1" class="project-img">
-          <h3 class="project-title">Webshop</h3>
-          <p class="project-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur itaque eius, maxime dolorem nobis esse sapiente blanditiis nihil voluptas, nulla corporis odit reiciendis unde soluta laudantium! Animi a quod perspiciatis.</p>
-          <div class="project-btns">
-            <button class="btn-github" onclick="location.href='https://github.com/'">Github</button>
-            <button class="btn-demo" onclick="location.href='https://github.com/'">Live Demo</button>
-          </div>
-        </div>
-      </div>
+        <div class="section-content">
+            <h2 class="section-title">Browse my recent projects</h2>
+            <div class="projects-container">
+                <div class="project">
+                    <div class="project-details">
+                        <img src="src/img/PPuse.png" alt="Project 1" class="project-img">
+                        <h3 class="project-title">Webshop</h3>
+                        <p class="project-p">
+                          The webshop project, a group assignment in school, utilized HTML, SCSS, and TypeScript. It facilitated product browsing, searching, cart management, and checkout processes. Users could seamlessly add items to their cart, review selections, and proceed to checkout by entering payment and shipping details. The project aimed to deliver an intuitive and responsive shopping experience.</p>
+                        <div class="project-btns">
+                          <button class="btn-github" onclick="window.open('https://github.com/Medieinstitutet/the-webshop-team-10', '_blank')">Github</button>
+                            <button class="btn-demo" onclick="location.href='https://github.com/'">Live Demo</button>
+                        </div>
+                    </div>
+                </div>
 
-      <div class="project">
-        <div class="project-details">
-          <img src="src/img/PPuse.png" alt="Project 2" class="project-img">
-          <h3 class="project-title">ChatBox</h3>
-          <p class="project-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur itaque eius, maxime dolorem nobis esse sapiente blanditiis nihil voluptas, nulla corporis odit reiciendis unde soluta laudantium! Animi a quod perspiciatis.</p>
-          <div class="project-btns">
-            <button class="btn-github" onclick="location.href='https://github.com/'">Github</button>
-            <button class="btn-demo" onclick="location.href='https://github.com/'">Live Demo</button>
-          </div>
-        </div>
-      </div>
+                <div class="project">
+                    <div class="project-details">
+                        <img src="src/img/PPuse.png" alt="Project 2" class="project-img">
+                        <h3 class="project-title">ChatBox</h3>
+                        <p class="project-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur itaque eius, maxime dolorem nobis esse sapiente blanditiis nihil voluptas, nulla corporis odit reiciendis unde soluta laudantium! Animi a quod perspiciatis.</p>
+                        <div class="project-btns">
+                            <button class="btn-github" onclick="location.href='https://github.com/'">Github</button>
+                            <button class="btn-demo" onclick="location.href='https://github.com/'">Live Demo</button>
+                        </div>
+                    </div>
+                </div>
 
-      <div class="project">
-        <div class="project-details">
-          <img src="src/img/PPuse.png" alt="Project 3" class="project-img">
-          <h3 class="project-title">Todo List</h3>
-          <p class="project-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur itaque eius, maxime dolorem nobis esse sapiente blanditiis nihil voluptas, nulla corporis odit reiciendis unde soluta laudantium! Animi a quod perspiciatis.</p>
-          <div class="project-btns">
-            <button class="btn-github" onclick="location.href='https://github.com/'">Github</button>
-            <button class="btn-demo" onclick="location.href='https://github.com/'">Live Demo</button>
-          </div>
+                <div class="project">
+                    <div class="project-details">
+                        <img src="src/img/PPuse.png" alt="Project 3" class="project-img">
+                        <h3 class="project-title">Todo List</h3>
+                        <p class="project-p">A simple todo list application developed with HTML, CSS, and JavaScript. Users can add, remove, and mark tasks as completed. Tasks can be added dynamically, removed with a single click, and marked as complete for easy tracking. </p>
+                        <div class="project-btns">
+                          <button class="btn-github" onclick="window.open('https://github.com/Medieinstitutet/todos-LaNtZ445', '_blank')">Github</button>
+                          <button class="btn-demo" onclick="location.href='https://github.com/'">Live Demo</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
     </section>
 
     <section id="contact" class="section">
-      <div class="contact-container">
+        <div class="contact-container">
 
-      </div>
+        </div>
     </section>
 
     <footer id="footer" class="section">
-      <div class="footer-p">
-          <p>Copyright &#169; 2023 Jacob Limapr Lantz. All Rights Reserved.</p>
-      </div>
-  </footer>
-  
+        <div class="footer-p">
+            <p>Copyright &#169; 2023 Jacob Limapr Lantz. All Rights Reserved.</p>
+        </div>
+    </footer>
 
-  
     <script src="src/js/index.js"></script>
 </body>
 </html>
