--- a/index.html
+++ b/index.html
@@ -98,19 +98,19 @@
                         <img src="src/img/PPuse.png" alt="Project 1" class="project-img">
                         <h3 class="project-title">Webshop</h3>
                         <p class="project-p">
-                          The webshop project, a group assignment in school, utilized HTML, SCSS, and TypeScript. It facilitated product browsing, searching, cart management, and checkout processes. Users could seamlessly add items to their cart, review selections, and proceed to checkout by entering payment and shipping details. The project aimed to deliver an intuitive and responsive shopping experience.</p>
+                          The webshop project, a group assignment utilized HTML, SCSS, and TypeScript. The project allowed users to browse, search, manage carts, and checkout smoothly. Users could add items to their cart, review selections, and proceed to checkout by entering payment and shipping details.</p>
                         <div class="project-btns">
                           <button class="btn-github" onclick="window.open('https://github.com/Medieinstitutet/the-webshop-team-10', '_blank')">Github</button>
                             <button class="btn-demo" onclick="location.href='https://github.com/'">Live Demo</button>
                         </div>
                     </div>
                 </div>
-
+                
                 <div class="project">
                     <div class="project-details">
                         <img src="src/img/PPuse.png" alt="Project 2" class="project-img">
                         <h3 class="project-title">ChatBox</h3>
-                        <p class="project-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur itaque eius, maxime dolorem nobis esse sapiente blanditiis nihil voluptas, nulla corporis odit reiciendis unde soluta laudantium! Animi a quod perspiciatis.</p>
+                        <p class="project-p">The chatbox project, created as a group effort, employs JavaScript, CSS, HTML, and MySQL. Users can register, log in, and chat with other logged-in users in real-time. The project focuses on facilitating secure online communication among users.</p>
                         <div class="project-btns">
                             <button class="btn-github" onclick="location.href='https://github.com/'">Github</button>
                             <button class="btn-demo" onclick="location.href='https://github.com/'">Live Demo</button>
