made contact section with links

--- a/index.html
+++ b/index.html
@@ -134,11 +134,23 @@
     </section>
 
     <section id="contact" class="section">
-        <div class="contact-container">
-
+      <h1 class="title">Contact Me</h1>
+      <div class="contact-info-upper-container">
+        <div class="home-hero__social">
+          <a href="mailto:jacoblimparlantz@gmail.com?Subject=Frontend%20Developer%20Portfolio%20Inquiry" class="home-hero__social-icon-link" target="_blank">
+            <i class="icon far fa-envelope"></i>
+          </a>
+          <p class="contact__link-p"><a href="mailto:jacoblimparlantz@gmail.com">jacoblimparlantz@gmail.com</a></p>
         </div>
+        <div class="home-hero__social">
+          <a href="https://github.com/LaNtZ445" class="home-hero__social-icon-link" target="_blank">
+            <i class="icon fab fa-github"></i>
+          </a>
+          <p class="contact__link-p"><a href="https://www.linkedin.com">Linkedin</a></p>
+        </div>
+      </div>
     </section>
-
+    
     <footer id="footer" class="section">
         <div class="footer-p">
             <p>Copyright &#169; 2023 Jacob Limapr Lantz. All Rights Reserved.</p>
